--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 .sign-in__wrapper {
   height: 100vh;
   width: 100%;
-  background-color: orange;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,6 +21,12 @@
 
 .login-container {
   height: 70vh;
+  width: 400px;
+  background-color: white;
+  border-radius: 2%;
+}
+.Register-container {
+  height: 85vh;
   width: 400px;
   background-color: white;
   border-radius: 2%;
